@@ -2,6 +2,7 @@ version 0.7.2
 	- Longwave urban modifications to give correct emission from
 	  walls, fixing error most noticeable with 2-streams - see
 	  radtool_legendre_gauss.F90 and radsurf_urban_lw.F90
+	- Added test/simple/test_noscat_in.nc test case
 
 version 0.7.1 (23 October 2020)
 	- Added Apache license statement to each source file
